src/test/c/accept/07-multiline-comment.ms
/*
	A multiline comment.
*/
team Argentina {
	badge { // Creación de figurita del escudo de Argentina
        Photo: https://seeklogo.com/images/A/afa-argentina-3-star-logo-CE85FC39D9-seeklogo.com.png;
    },
    player Angel Di Maria { // Creación de figurita de Di Maria
        Birthdate: 14/2/1988;
        Height: 1.78;
        Weight: 75;
        Team: Sport Lisboa e Benfica;
        Photo: https://upload.wikimedia.org/wikipedia/commons/8/8c/NIG-ARG_%285%29.jpg;
    },
    player Nicolas Otamendi { // Creación de figurita de Otamendi
        Birthdate: 12/2/1988;
        Height: 1.83;
        Weight: 82;
        Team: Sport Lisboa e Benfica;
        Photo: https://img.a.transfermarkt.technology/portrait/big/54781-1669835534.jpg;
    }
}
