src/test/c/reject/01-missing-punct.ms
country Argentina {
    badge { // Creación de figurita del escudo de Argentina
        Photo: http://foto.google.com/afa.png;
    }
    player Angel Di Maria { // Creación de figurita de Di Maria
        Birthdate: 14/2/1988;
        Height: 1.78;
        Weight: 75;
        Team: Sport Lisboa e Benfica
        Photo: http://foto.google.com/dimaria.png;
    }
},